@@ -1,1 +1,21 @@
 # MPP-LmsFX
+
+---  
+
+__It’s a simple library management system demo using Spring Boot and JavaFX.__
+
+
+## __Stack:__
+- Spring Boot 2.7, MySQL, JavaFX 18.0.1
+
+---
+
+## #. Run using your preferred IDE (Recommended IntelliJ)
+
+### __Steps__:
+- Download javafx `SDK` from here: https://gluonhq.com/products/javafx/  
+- Add "JavaFX lib" to the project classpath e.g `\Users\Downloads\javafx-sdk-18.0.1\lib\`
+- Add to VM Option `--module-path \Users\Downloads\javafx-sdk-18.0.1\lib --add-modules=javafx.controls,javafx.fxml ` 
+- Then, Run the application
+
+
